// protoc -I=/source/user-api-gateway/proto/ --go_out=/ --go-grpc_out=/ /source/user-api-gateway/proto/database/post.proto
syntax = "proto3";

option go_package = "source/user-api-gateway/proto";

package proto;

service RegistryService{
    rpc SetRegistry(RegistryRequest) returns (RegistryReply) {};
}

message RegistryRequest{
    string account = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string confirmPassword = 5;
}

message RegistryReply{
    bool success = 1;
}
